# HapticSuit

./: .gitignore  FULL_SYSTEM_WIRING.md  GAZEBO_INTEGRATION_PLAN.md  INTEGRATION_PLAN.md  LICENSE  PLAN.md  README.md  REFACTOR_PLAN.md  SIMULATION_ARCHITECTURE.md  VALIDATION_GUIDE.md  WIRING_INSTRUCTIONS.md  haptic_bridge.py  monoboard_wiring_guide.md  wifi_test_sender.py
.cursor/rules/: 000-project-context.mdc  100-ros-cpp.mdc  200-ros-python.mdc  300-freyja-haptic.mdc
docs/: TECHNICAL_REFERENCE.md
drone_ws/: README.md
drone_ws/src/Freyja/: README.md
drone_ws/src/flight_controller/: CLEANUP_SUMMARY.md  CMakeLists.txt  README.md  package.xml
drone_ws/src/haptic_interface/: CMakeLists.txt  package.xml
drone_ws/src/haptic_interface/launch/: start_simulation.launch
drone_ws/src/haptic_interface/scripts/: haptic_bridge.py  kinematics_solver.py  mock_suit.py  sitl_launcher.py  wind_sitl_launcher.py
firmware/: README.md
firmware/HapticSuitController/: HapticSuitController.ino  PID.cpp
firmware/HapticSuitController/IMUTest/: IMUTest.ino
firmware/HapticSuitMaster/: HapticSuitMaster.ino
firmware/HapticSuitSlave/: HapticSuitSlave.ino  PID.cpp
firmware/HapticSuitUnoR4Single/: HapticSuitUnoR4Single.ino  PID.cpp
firmware/I2C_Scanner/: I2C_Scanner.ino
firmware/SimpleHardwareTest/: SimpleHardwareTest.ino
firmware/WiFiTest_NoIMU/: PID.cpp  WiFiTest_NoIMU.ino
firmware/tests/MasterTest/: MasterTest.ino
kinematics/: .gitignore  README.md
kinematics/plotter/: animtated_plot.py  forward_kinematics.py  single_plot.py
physical_design/: README.md
(+142 files in other folders)
