<?xml version="1.0"?>
<package format="2">
  <name>haptic_interface</name>
  <version>0.0.0</version>
  <description>The haptic_interface package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
</package>
